--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         </div>
 
         <!-- Links to services -->
-        <div class="col-lg-3">
+        <div class="col-md-3">
           <p class="mb-3">Services</p>
 
           <a class="m-0 text-white text-decoration-none d-block" href="">Keyword Research</a>
@@ -398,7 +398,7 @@
         </div>
 
         <!-- Links to company information -->
-        <div class="col-lg-3">
+        <div class="col-md-3">
           <p class="mb-3">Company</p>
 
           <a class="m-0 text-white text-decoration-none d-block" href="">About Us</a>
