--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         </div>
 
         <!-- Links to services -->
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <p class="mb-3">Services</p>
 
           <a class="m-0 text-white text-decoration-none d-block" href="">Keyword Research</a>
@@ -398,14 +398,14 @@
         </div>
 
         <!-- Links to company information -->
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <p class="mb-3">Company</p>
 
           <a class="m-0 text-white text-decoration-none d-block" href="">About Us</a>
           <a class="m-0 text-white text-decoration-none d-block" href="">Our Team</a>
           <a class="m-0 text-white text-decoration-none d-block" href="">Case Studies</a>
           <a class="m-0 text-white text-decoration-none d-block" href="">Blogs</a>
-          <a class="m-0 text-white text-decoration-none d-block" href="">Careers</a>
+          <a class="m-0 text-white text-deco6ration-none d-block" href="">Careers</a>
         </div>
       </div>
 
